--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="content">
         <span class="hi"> hi there... </span>
-        <h3> i am <span> nhi nguyen</span> </h3>
+        <h3> i am <span>Yen Nhi</span> </h3>
         <p class="text"> 3rd year student at Ho Chi Minh City University of Education and Technology </p>
         <a href="#about" class="btn">about me</a>
     </div>
