--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
 
 <!-- custom cursors  -->
-<div class="cursor_1"></div>
-<div class="cursor_2"></div>
+<div class="cursor-1"></div>
+<div class="cursor-2"></div>
 
 
 <div id="menu-bars" class="fas fa-bars"></div>
