--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 <!-- contact section ends -->
 
 <!-- footer section  -->
-<footer class="footer"> created by <span> Nhi Nguyen </span> | all rights reserved! </footer>
+<footer class="footer"> created by <span> Yen Nhi </span> | all rights reserved! </footer>
 
 
 
