--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <header>
 
-    <a href="#" class="logo"> <span>nhi</span> nguyen </a>
+    <a href="#" class="logo"> <span>yen</span> nhi </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
